sample/asm/errors/illegal_directive.asm
.fuction: main
    izero 0
    return
.end
